script.1: Fix a typo, bump date.

--- a/usr.bin/script/script.1
+++ b/usr.bin/script/script.1
@@ -28,7 +28,7 @@
 .\"	@(#)script.1	8.1 (Berkeley) 6/6/93
 .\" $FreeBSD: head/usr.bin/script/script.1 314436 2017-02-28 23:42:47Z imp $
 .\"
-.Dd December 4, 2013
+.Dd November 25, 2018
 .Dt SCRIPT 1
 .Os
 .Sh NAME
@@ -160,7 +160,7 @@ is assumed.
 .Xr csh 1
 .Po
 for the
-.Em= history
+.Em history
 mechanism
 .Pc
 .Sh HISTORY
