--- a/sbin/ifconfig/ifconfig.8
+++ b/sbin/ifconfig/ifconfig.8
@@ -28,7 +28,7 @@
 .\"     From: @(#)ifconfig.8	8.3 (Berkeley) 1/5/94
 .\" $FreeBSD: src/sbin/ifconfig/ifconfig.8,v 1.124 2006/10/10 09:44:08 ru Exp $
 .\"
-.Dd June 16, 2018
+.Dd November 27, 2018
 .Dt IFCONFIG 8
 .Os
 .Sh NAME
@@ -39,6 +39,7 @@
 .Op Fl L
 .Op Fl k
 .Op Fl m
+.Op Fl n
 .Ar interface
 .Op Cm create
 .Op Ar address_family
@@ -48,6 +49,7 @@
 .Oc
 .Op Ar parameters
 .Nm
+.Op Fl n
 .Ar interface
 .Cm destroy
 .Nm
@@ -2318,6 +2320,13 @@ For example, the values of 802.11 WEP keys will be printed, if accessible to
 the current user.
 This information is not printed by default, as it may be considered
 sensitive.
+.Pp
+If the network interface driver is not present in the kernel then
+.Nm
+will attempt to load it.
+The
+.Fl n
+flag disables this behavior.
 .Pp
 Only the super-user may modify the configuration of a network interface.
 .Sh DIAGNOSTICS
