libc/locale: Mark up defined values better in the manual pages.

--- a/lib/libc/locale/setlocale.3
+++ b/lib/libc/locale/setlocale.3
@@ -57,7 +57,7 @@ The
 .Fn setlocale
 function recognizes several categories of routines.
 These are the categories and the sets of routines they select:
-.Bl -tag -width LC_MONETARY
+.Bl -tag -width ".Dv LC_MONETARY"
 .It Dv LC_ALL
 Set the entire locale generically.
 .It Dv LC_COLLATE
