--- a/lib/libc/locale/newlocale.3
+++ b/lib/libc/locale/newlocale.3
@@ -51,17 +51,17 @@ Any other components will be inherited from
 The
 .Fa mask
 is either
-.Fa LC_ALL_MASK ,
+.Dv LC_ALL_MASK ,
 indicating all possible locale components,
 or the logical OR of some combination of the following:
-.Bl -tag -width "LC_MESSAGES_MASK" -offset indent
-.It LC_COLLATE_MASK
+.Bl -tag -width ".Dv LC_MESSAGES_MASK" -offset indent
+.It Dv LC_COLLATE_MASK
 The locale for string collation routines.
 This controls alphabetic ordering in
 .Xr strcoll 3
 and
 .Xr strxfrm 3 .
-.It LC_CTYPE_MASK
+.It Dv LC_CTYPE_MASK
 The locale for the
 .Xr ctype 3
 and
@@ -69,16 +69,16 @@ and
 functions.
 This controls recognition of upper and lower case, alphabetic or
 non-alphabetic characters, and so on.
-.It LC_MESSAGES_MASK
+.It Dv LC_MESSAGES_MASK
 Set a locale for message catalogs, see
 .Xr catopen 3
 function.
-.It LC_MONETARY_MASK
+.It Dv LC_MONETARY_MASK
 Set a locale for formatting monetary values; this affects
 the
 .Xr localeconv 3
 function.
-.It LC_NUMERIC_MASK
+.It Dv LC_NUMERIC_MASK
 Set a locale for formatting numbers.
 This controls the formatting of decimal points in input and output of floating
 point numbers in functions such as
@@ -87,7 +87,7 @@ and
 .Xr scanf 3 ,
 as well as values returned by
 .Xr localeconv 3 .
-.It LC_TIME_MASK
+.It Dv LC_TIME_MASK
 Set a locale for formatting dates and times using the
 .Xr strftime 3
 function.
