hier.7: Use .Xr

--- a/share/man/man7/hier.7
+++ b/share/man/man7/hier.7
@@ -627,7 +627,8 @@ writable by the
 group for command connection sockets; see
 .Xr ppp 8
 .It Pa resolvconf/
-state directory for resolvconf
+state directory for
+.Xr resolvconf 8
 .It Pa utmp
 database of current users;
 see
