--- a/share/man/man5/varsym.conf.5
+++ b/share/man/man5/varsym.conf.5
@@ -29,7 +29,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd May 11, 2007
+.Dd December 19, 2018
 .Dt VARSYM.CONF 5
 .Os
 .Sh NAME
@@ -42,12 +42,24 @@ variables
 .Sh DESCRIPTION
 The
 .Nm
-file specifies a list of variables that can then be used in variant symlinks.
-Each line has the format
-.Li var=data .
+file specifies a list of system-wide variables that can then be used in
+variant symlinks.
+Each line specifies one variable and its data in the same format of the
+.Xr varsym 1
+command, i.e.,
+.Bd -literal -offset indent
+var=data
+"variable name"="variable data"
+.Ed
+.Pp
+Spaces are not allowed around the
+.Dq =
+sign.
+Both the variable name and data can contain spaces but must be quoted.
 Empty lines or lines beginning with a
 .Dq #
 are ignored.
+Inline comments should not be used.
 .Pp
 Processing
 .Nm
