Sync ACPICA with Intel's version 20181213.
* Fix buffer length issues with the GenericSerialStatus.

* New object evaluation trace mechanism for control methods and data
  objects (ACPI_LV_EVALUATION).

* _OSI strings sync.

* New options in iasl (-ww) and acpiexec (-eo).

* Various smaller fixes and additions.

For detailed list, please see sys/contrib/dev/acpica/changes.txt.

--- a/share/man/man4/acpi.4
+++ b/share/man/man4/acpi.4
@@ -25,7 +25,7 @@
 .\"
 .\" $FreeBSD: src/share/man/man4/acpi.4,v 1.61.8.1 2009/04/15 03:14:26 kensmith Exp $
 .\"
-.Dd January 15, 2018
+.Dd December 14, 2018
 .Dt ACPI 4
 .Os
 .Sh NAME
@@ -556,6 +556,7 @@ All the previous levels
 .It Li ACPI_LV_RESOURCES
 .It Li ACPI_LV_USER_REQUESTS
 .It Li ACPI_LV_PACKAGE
+.It Li ACPI_LV_EVALUATION
 .It Li ACPI_LV_VERBOSITY1
 All the previous levels
 .It Li ACPI_LV_ALLOCATIONS
