--- a/usr.sbin/acpi/iasl/iasl.8
+++ b/usr.sbin/acpi/iasl/iasl.8
@@ -28,7 +28,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd September 1, 2017
+.Dd December 14, 2018
 .Dt IASL 8
 .Os
 .Sh NAME
@@ -194,6 +194,8 @@ Expect a specific warning, remark, or error.
 Set warning reporting level.
 .It Fl we
 Report warnings as errors.
+.It Fl ww Ar messageid
+Report a specific warning or remark as error.
 .It Fl x Ar level
 Set debug level for trace output.
 .It Fl z
