--- a/usr.sbin/acpi/acpiexec/acpiexec.8
+++ b/usr.sbin/acpi/acpiexec/acpiexec.8
@@ -28,7 +28,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd November 1, 2018
+.Dd December 14, 2018
 .Dt ACPIEXEC 8
 .Os
 .Sh NAME
@@ -68,6 +68,8 @@ Enable display of final memory statistics.
 Enable additional tests for ACPICA interfaces.
 .It Fl el
 Enable loading of additional test tables.
+.It Fl eo
+Enable object evaluation log.
 .It Fl es
 Enable Interpreter Slack Mode.
 .It Fl et
