Add efidev.4 and efirt.9 manual pages from FreeBSD.

--- a/lib/libefivar/efivar.3
+++ b/lib/libefivar/efivar.3
@@ -24,7 +24,7 @@
 .\"
 .\" $FreeBSD: head/lib/libefivar/efivar.3 307071 2016-10-11 22:30:41Z imp $
 .\"
-.Dd September 14, 2016
+.Dd December 15, 2018
 .Dt LIBEFIVAR 3
 .Os
 .Sh NAME
@@ -92,6 +92,7 @@ and
 .Fn efi_guid_to_symbol
 This function is not actually implemented.
 .Sh SEE ALSO
+.Xr efidev 4 ,
 .Xr efivar 8
 .Sh AUTHORS
 .An -nosplit
