--- a/share/man/man9/efirt.9
+++ b/share/man/man9/efirt.9
@@ -26,7 +26,7 @@
 .\"
 .\" $FreeBSD: head/share/man/man9/efirt.9 337957 2018-08-17 04:17:51Z kevans $
 .\"
-.Dd December 15, 2018
+.Dd December 17, 2018
 .Dt EFIRT 9
 .Os
 .Sh NAME
@@ -45,6 +45,7 @@
 .Cd "options EFIRT"
 .Pp
 .In sys/efi.h
+.In machine/efi.h
 .\".Ft int
 .\".Fn efi_rt_ok "void"
 .Ft int
