--- a/lib/libc/gen/endutxent.3
+++ b/lib/libc/gen/endutxent.3
@@ -27,7 +27,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd December 20, 2010
+.Dd December 23, 2018
 .Dt ENDUTXENT 3
 .Os
 .Sh NAME
@@ -131,7 +131,7 @@ struct utmpx {
         char ut_line[_UTX_LINESIZE];    /* tty name */
         char ut_host[_UTX_HOSTSIZE];    /* host name */
         uint16_t ut_session;            /* session id used for windowing */
-        uint16_t ut_type;               /* type of this entry */
+        short ut_type;                  /* type of this entry */
         pid_t ut_pid;                   /* process id creating the entry */
         struct {
                 uint16_t e_termination; /* process termination signal */
