--- a/share/man/man7/vkernel.7
+++ b/share/man/man7/vkernel.7
@@ -29,7 +29,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd June 20, 2015
+.Dd December 27, 2018
 .Dt VKERNEL 7
 .Os
 .Sh NAME
@@ -285,8 +285,8 @@ the time.
 However, the more precise timer might be necessary for your application.
 .Pp
 By default, the vkernel uses the TSC cpu timer if possible, or an imprecise
-(host-tick-resolution) timer which uses a user-mapped kernel page and doe
- not have any syscall overhead.
+(host-tick-resolution) timer which uses a user-mapped kernel page and does
+not have any syscall overhead.
 .It Fl T
 Force the vkernel to not use the TSC cpu timer.
 .It Fl U
