vkernel - Remove unneeded -T flag, that was added in 7b21e5e4a2ba4592a.
* Instead the -e hw.tsc_cputimer_enable=0 flag can be used, to set the
  tunable that disables use of the TSC cputimer.

Pointed-out-by: swildner

--- a/share/man/man7/vkernel.7
+++ b/share/man/man7/vkernel.7
@@ -287,8 +287,9 @@ However, the more precise timer might be necessary for your application.
 By default, the vkernel uses the TSC cpu timer if possible, or an imprecise
 (host-tick-resolution) timer which uses a user-mapped kernel page and does
 not have any syscall overhead.
-.It Fl T
-Force the vkernel to not use the TSC cpu timer.
+To disable the TSC cpu timer, use the
+.Fl e Ar hw.tsc_cputimer_enable=0
+flag.
 .It Fl U
 Enable writing to kernel memory and module loading.
 By default, those are disabled for security reasons.
