ipfw3: insert the new rule in the beginning
"ipfw3 add" is still the same, while the "ipfw3 insert" is the new method
which will insert the new rule in the beginning of the rule list.

--- a/sbin/ipfw3/ipfw3.8
+++ b/sbin/ipfw3/ipfw3.8
@@ -1,7 +1,7 @@
 .\"
 .\" $FreeBSD: src/sbin/ipfw/ipfw.8,v 1.63.2.33 2003/02/04 01:36:02 brueffer Exp $
 .\"
-.Dd April 17, 2018
+.Dd January 7, 2019
 .Dt IPFW3 8
 .Os
 .Sh NAME
@@ -10,7 +10,7 @@
 .Sh SYNOPSIS
 .Nm
 .Op Fl cq
-.Cm add
+.Brq Cm add | insert
 .Ar rule
 .Nm
 .Op Fl acdDefNStTv
