--- a/lib/libc/stdio/getline.3
+++ b/lib/libc/stdio/getline.3
@@ -24,7 +24,7 @@
 .\"
 .\" $FreeBSD: head/lib/libc/stdio/getline.3 303524 2016-07-30 01:00:16Z bapt $
 .\"
-.Dd August 31, 2016
+.Dd January 16, 2019
 .Dt GETLINE 3
 .Os
 .Sh NAME
@@ -80,6 +80,13 @@ terminating
 .Dv NUL
 character.
 The value \-1 is returned if an error occurs, or if end-of-file is reached.
+.Pp
+The functions do not distinguish between end-of-file and error,
+and callers must use
+.Xr feof 3
+and
+.Xr ferror 3
+to determine which occurred.
 .Sh EXAMPLES
 The following code fragment reads lines from a file and
 writes them to standard output.
@@ -92,9 +99,13 @@ characters.
 char *line = NULL;
 size_t linecap = 0;
 ssize_t linelen;
+
 while ((linelen = getline(&line, &linecap, fp)) > 0)
 	fwrite(line, linelen, 1, stdout);
+
 free(line);
+if (ferror(fp))
+	perror("getline");
 .Ed
 .Sh ERRORS
 These functions may fail if:
@@ -117,6 +128,7 @@ These functions may also fail due to any of the errors specified for
 and
 .Fn malloc .
 .Sh SEE ALSO
+.Xr ferror 3 ,
 .Xr fgetln 3 ,
 .Xr fgets 3 ,
 .Xr malloc 3
