--- a/lib/libc/stdio/fgetln.3
+++ b/lib/libc/stdio/fgetln.3
@@ -27,9 +27,8 @@
 .\"
 .\"     @(#)fgetln.3	8.3 (Berkeley) 4/19/94
 .\" $FreeBSD: src/lib/libc/stdio/fgetln.3,v 1.10 2009/02/28 06:00:58 das Exp $
-.\" $DragonFly: src/lib/libc/stdio/fgetln.3,v 1.2 2003/06/17 04:26:45 dillon Exp $
 .\"
-.Dd April 19, 1994
+.Dd January 16, 2019
 .Dt FGETLN 3
 .Os
 .Sh NAME
@@ -124,3 +123,28 @@ The
 .Fn fgetln
 function first appeared in
 .Bx 4.4 .
+.Sh CAVEATS
+Since the returned buffer is not a C string (it is not null terminated), a
+common practice is to replace the newline character with
+.Sq \e0 .
+However, if the last line in a file does not contain a newline,
+the returned text won't contain a newline either.
+The following code demonstrates how to deal with this problem by allocating a
+temporary buffer:
+.Bd -literal
+	char *buf, *lbuf;
+	size_t len;
+
+	while ((lbuf = buf = fgetln(fp, &len)) != NULL) {
+		if (len > 0 && buf[len - 1] == '\en')
+			buf[len - 1] = '\e0';
+		else if ((lbuf = strndup(buf, len + 1)) == NULL)
+			err(1, NULL);
+		printf("%s\en", lbuf);
+
+		if (lbuf != buf)
+			free(lbuf);
+	}
+	if (ferror(fp))
+		perror("fgetln");
+.Ed
