efirt.9: Comment out a non-existant function.

--- a/share/man/man9/efirt.9
+++ b/share/man/man9/efirt.9
@@ -26,7 +26,7 @@
 .\"
 .\" $FreeBSD: head/share/man/man9/efirt.9 337957 2018-08-17 04:17:51Z kevans $
 .\"
-.Dd December 17, 2018
+.Dd January 21, 2019
 .Dt EFIRT 9
 .Os
 .Sh NAME
@@ -34,7 +34,7 @@
 .\".Nm efi_rt_ok ,
 .Nm efi_get_table ,
 .Nm efi_get_time ,
-.Nm efi_get_time_capabilities ,
+.\".Nm efi_get_time_capabilities ,
 .Nm efi_reset_system ,
 .Nm efi_set_time ,
 .Nm efi_var_get ,
