--- a/share/man/man4/pcm.4
+++ b/share/man/man4/pcm.4
@@ -25,7 +25,7 @@
 .\"
 .\" $FreeBSD: head/share/man/man4/pcm.4 267938 2014-06-26 21:46:14Z bapt $
 .\"
-.Dd January 8, 2015
+.Dd January 26, 2019
 .Dt SOUND 4
 .Os
 .Sh NAME
@@ -159,7 +159,9 @@ This will mute the input channel per default.
 Multichannel audio, popularly referred to as
 .Dq surround sound
 is supported and enabled by default.
-The FreeBSD multichannel matrix processor supports up to 18 interleaved
+The
+.Dx
+multichannel matrix processor supports up to 18 interleaved
 channels, but the limit is currently set to 8 channels (as commonly used
 for 7.1 surround sound).
 The internal matrix mapping can handle reduction, expansion or
@@ -201,7 +203,8 @@ options can be configured via the
 .Xr sysctl 8
 interface but can only be manipulated while the device is inactive.
 .Ss VPC
-FreeBSD supports independent and individual volume controls for each active
+.Dx
+supports independent and individual volume controls for each active
 application, without touching the master
 .Nm
 volume.
