--- a/usr.bin/gcore/gcore.1
+++ b/usr.bin/gcore/gcore.1
@@ -36,8 +36,10 @@
 .Nd get core images of running process
 .Sh SYNOPSIS
 .Nm
-.Op Fl s
 .Op Fl c Ar core
+.Op Fl l Ar seglimit
+.Op Fl s
+.Op Fl v
 .Op Ar executable
 .Ar pid
 .Sh DESCRIPTION
@@ -62,6 +64,10 @@ The following options are available:
 .It Fl c
 Write the core file to the specified file instead of
 .Dq Pa core.<pid> .
+.It Fl l Ar seglimit
+Tells gcore to skip map segments larger than the specified
+limit, in bytes.  Specify a suffix 'k', 'm', 'g', or 't' for
+kilobytes, etc.  Segments ignored due to the option will be reported.
 .It Fl s
 Stop the process while gathering the core image, and resume it
 when done.  This guarantees that the resulting core dump will
@@ -69,6 +75,8 @@ be in a consistent state.  The process is resumed even if it was
 already stopped.
 The same effect can be achieved manually with
 .Xr kill 1 .
+.It Fl v
+Verbosely print out the map segments being dumped.
 .El
 .Sh FILES
 .Bl -tag -width /var/log/messages -compact
