makefs(8): DragonFly porting.
Some notes:

* UFS2 support has been disabled for now. It would require more UFS2
  related pieces in our UFS kernel headers. I might look at enabling
  this in the future.

* Our CGSIZE() macro causes issues when used in makefs(8), which is
  why I'm using FreeBSD's currently.

* makefs(8) uses a local daddr_t type which is 64 bits wide, since
  ours is 32 bits.

* I added cg_blks() and cg_blktot() calls in a few places because
  our fsck(8) checks them in pass 5. I'm not sure if the associated
  fields are actually needed anymore.

--- a/usr.sbin/makefs/makefs.8
+++ b/usr.sbin/makefs/makefs.8
@@ -35,7 +35,7 @@
 .\"
 .\" $FreeBSD: head/usr.sbin/makefs/makefs.8 331843 2018-03-31 15:04:41Z benno $
 .\"
-.Dd March 30, 2018
+.Dd February 10, 2019
 .Dt MAKEFS 8
 .Os
 .Sh NAME
@@ -307,13 +307,14 @@ Optimization preference; one of
 .Ql space
 or
 .Ql time .
-.It Sy extent
-Maximum extent size.
+.\".It Sy extent
+.\"Maximum extent size.
 .It Sy maxbpcg
 Maximum total number of blocks in a cylinder group.
 .It Sy version
 UFS version.
-1 for FFS (default), 2 for UFS2.
+1 for FFS (default and the only supported value).
+.\", 2 for UFS2.
 .It Sy softupdates
 0 for disable (default), 1 for enable
 .El
