--- a/sbin/newfs/newfs.8
+++ b/sbin/newfs/newfs.8
@@ -28,7 +28,7 @@
 .\"     @(#)newfs.8	8.6 (Berkeley) 5/3/95
 .\" $FreeBSD: src/sbin/newfs/newfs.8,v 1.26.2.15 2003/05/13 12:16:08 joerg Exp $
 .\"
-.Dd September 29, 2016
+.Dd February 10, 2019
 .Dt NEWFS 8
 .Os
 .Sh NAME
@@ -406,6 +406,7 @@ and
 .Xr disklabel 8 ,
 .Xr dumpfs 8 ,
 .Xr fsck 8 ,
+.Xr makefs 8 ,
 .Xr mount 8 ,
 .Xr tunefs 8 ,
 .Xr vinum 8
