--- a/share/man/man9/mutex.9
+++ b/share/man/man9/mutex.9
@@ -28,7 +28,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd April 10, 2015
+.Dd February 14, 2019
 .Dt MUTEX 9
 .Os
 .Sh NAME
@@ -200,7 +200,7 @@ The
 function is a yet shorter form for exclusively locking a mutex, blocking the
 current thread until acquired.
 It is equivalent to
-.Fn mtx_lock_ex "mtx" \&"mtxex\&" "0" "0" .
+.Fn mtx_lock_ex "mtx" "0" "0" .
 The
 .Fn mtx_lock_ex
 and
